Added DevExpress Scheduler Created REST API producing JSON with TASKS of current user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=SecretaryDatabase
 
 spring.jpa.show-sql=true
 spring.session.store-type=none
+
+spring.mvc.static-path-pattern=/static/**
