--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.generate-ddl = true
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/secretary
-spring.datasource.username=postgres
-spring.datasource.password=SecretaryDatabase
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/secretary
+spring.datasource.username = postgres
+spring.datasource.password = SecretaryDatabase
 
-spring.jpa.show-sql=true
-spring.session.store-type=none
+spring.jpa.show-sql = true
+spring.session.store-type = none
 
-spring.mvc.static-path-pattern=/static/**
+spring.mvc.static-path-pattern = /static/**
+
+bot.username = test_secretary_bot
+bot.token = 5003443672:AAH7iO5DDJ7yD7LRI445y6sIfEjUxK67YNY
